--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ djangorestframework-simplejwt==5.3.0
 gunicorn==21.2.0
 whitenoise==6.6.0
 dj-database-url==2.1.0
+django-storages==1.14.2
+boto3==1.34.30
