--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==4.2.7
+Django~=4.2.7
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 psycopg2-binary==2.9.9
@@ -12,3 +12,5 @@ dj-database-url==2.1.0
 django-storages==1.14.2
 boto3==1.34.30
 python-dotenv==1.0.1
+django-redis==5.4.0
+sentry-sdk==1.40.6
